<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatriculaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/matriculatxt"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buscarmatribtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buscar"
            android:onClick="onClick2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:text="@string/hint_matricula"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewMatricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:text="@string/hint_matricula"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/hint_student"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewNombreS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_student"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/hint_ing"
                android:textColor="@color/colorPrimary" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewCarrera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hint_ing"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/regismatribtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:layout_marginTop="15dp"
            android:onClick="onClick2"/>



    </LinearLayout>

</LinearLayout>